Products and Payment {services and controllers}

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,18 +23,9 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
 
+paygate.id=10011072130
+paygate.api.endpoint.process=https://secure.paygate.co.za/payweb3/process.trans
 
-
-
-
-
-stripe.public.key=YOUR_STRIPE_PUBLIC_KEY
-stripe.secret.key=YOUR_STRIPE_SECRET_KEY
-
-sendgrid.api.key=YOUR_SENDGRID_API_KEY
-
-twilio.account.sid=YOUR_TWILIO_ACCOUNT_SID
-twilio.auth.token=YOUR_TWILIO_AUTH_TOKEN
 
 redis.host=localhost
 redis.port=6379
